@@ -43,6 +43,7 @@ DayOfTheWeek, Month DD, YYYY / The Tcpdump Group
       Report {non-existent zone}/{interface} errors appropriately.
       Allow attaching to links owned by a non-global zone.  (Based on
         pull request #1202.)
+      Fix AF_LINK handling on illumos.
     macOS:
       Redid the availability macros to be closer to what Apple's doing
         in recent SDKs, including tagging pcap-namedb.h routines.
